--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
         <div class="user-details">
           <div class="input-box">
             <span class="details">姓名*</span>
-            <input type="text" name="your-name" placeholder="請輸入你的姓名" required>
+            <input type="text" name="name" placeholder="請輸入你的姓名" required>
           </div>
           <div class="input-box">
             <span class="details">聯絡電話</span>
-            <input type="text" name="your-number" placeholder="請輸入你的電話">
+            <input type="text" name="number" placeholder="請輸入你的電話">
           </div>
           <div class="input-box">
             <span class="details">電子信箱</span>
-            <input type="email" name="your-email" placeholder="請輸入你的信箱">
+            <input type="email" name="email" placeholder="請輸入你的信箱">
           </div>
       </div>
       <div class="guest-side">
