update landing page

--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
 <body>
 	<div class="top-title">
         Wedding Invitation
-    </div>
-  <div class="container">
+      </div>
+  <div class="top" id="topButton">
+    <button class="button-30" role="button" id="showFormButton">填寫表單</button>     
+  </div>
+  <div class="container" id="containerId"> 
     <div class="title">Registration</div>
     <div class="content">
 		<form method="post" action="https://script.google.com/macros/s/AKfycbwhjz0OXaTNTEk-G1QiDC7bs-bdgxijmDSn-9PpVL7GlLO8SfeBrv2iqofIbnBfoxkUYw/exec" name="contact-form">
