--- a/index.html
+++ b/index.html
@@ -1,105 +1,22 @@
 <!DOCTYPE html>
-<!-- Created By CodingLab - www.codinglabweb.com -->
 <html lang="en" dir="ltr">
   <head>
     <meta charset="UTF-8">
-    <!---<title> Responsive Registration Form | CodingLab </title>--->
     <link rel="stylesheet" href="sheet.css">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>Registration Form</title>
+     <title>Jason Julia Wedding</title>
    </head>
 <body>
-	<div class="top-title">
-        Wedding Invitation
-      </div>
-  <div class="top" id="topButton">
-    <button class="button-30" role="button" id="showFormButton">填寫表單</button>     
-  </div>
-  <div class="container" id="containerId"> 
-    <div class="title">Registration</div>
-    <div class="content">
-		<form method="post" action="https://script.google.com/macros/s/AKfycbwhjz0OXaTNTEk-G1QiDC7bs-bdgxijmDSn-9PpVL7GlLO8SfeBrv2iqofIbnBfoxkUYw/exec" name="contact-form">
-        <div class="user-details">
-          <div class="input-box">
-            <span class="details">姓名*</span>
-            <input type="text" name="name" placeholder="請輸入你的姓名" required>
-          </div>
-          <div class="input-box">
-            <span class="details">聯絡電話</span>
-            <input type="text" name="number" placeholder="請輸入你的電話">
-          </div>
-          <div class="input-box">
-            <span class="details">電子信箱</span>
-            <input type="email" name="email" placeholder="請輸入你的信箱">
-          </div>
-      </div>
-      <div class="guest-side">
-				<input type="radio" name="side" id="dot-1" value="a">
-				<input type="radio" name="side" id="dot-2" value="b">
-				<span class="side-title">關係</span>
-				<div class="category">
-				  <label for="dot-1">
-				  <span class="dot one"></span>
-				  <span class="side">男方親友</span>
-				</label>
-				<label for="dot-2">
-				  <span class="dot two"></span>
-				  <span class="side">女方親友</span>
-				</label>
-				</div>
-        <div class="attendance-details">
-          <input type="radio" name="attendance" id="adot-1" value="a">
-          <input type="radio" name="attendance" id="adot-2" value="b">
-          <span class="attendance-title">是否出席婚宴</span>
-          <div class="a-category">
-            <label for="adot-1">
-            <span class="dot one"></span>
-            <span class="attendance">會出席</span>
-          </label>
-          <label for="adot-2">
-            <span class="dot two"></span>
-            <span class="attendance">有事不克前往</span>
-          </label>
-          </div>
-          <div class="invitation-details">
-            <input type="radio" name="invitation" id="idot-1" value="a">
-            <input type="radio" name="invitation" id="idot-2" value="b">
-            <span class="invitation-title">是否需要紙本喜帖</span>
-            <div class="i-category">
-              <label for="idot-1">
-              <span class="dot one"></span>
-              <span class="invitation">是</span>
-            </label>
-            <label for="idot-2">
-              <span class="dot two"></span>
-              <span class="invitation">否</span>
-            </label>
-            </div>
-            <div class="stay-details">
-              <input type="radio" name="stay" id="sdot-1" value="a">
-              <input type="radio" name="stay" id="sdot-2" value="b">
-              <span class="stay-title">是否需要住宿(與飯店配合當天一晚4500元)</span>
-              <div class="s-category">
-                <label for="sdot-1">
-                <span class="dot one"></span>
-                <span class="invitation">是</span>
-              </label>
-              <label for="sdot-2">
-                <span class="dot two"></span>
-                <span class="invitation">否</span>
-              </label>
-              </div>
-              <div class="user-details">
-              <div class="input-box">
-                <input name="message" rows="20" placeholder="Your Message">
-              </div>
-            </div>
-        <div class="button">
-          <input type="submit" value="Register">
-        </div>
-      </form>
-    </div>
-  </div>
+  <h1>Wedding Invitation</h1>
+      <nav class="navbar">
+        <ul>
+            <li><a href="index.html">首頁</a></li>
+            <li><a href="form.html">填寫報名表</a></li>
+            <li><a href="products.html">婚禮資訊</a></li>
+            <li><a href="contact.html">訂房資訊</a></li>
+            <li><a href="contact.html">婚禮照</a></li>
+        </ul>
+    </nav>
   <script src="sheet.js"></script>
 </body>
 </html>
