--- a/form.html
+++ b/form.html
@@ -14,9 +14,7 @@
         <ul>
             <li><a href="index.html">首頁</a></li>
             <li><a href="form.html">填寫報名表</a></li>
-            <li><a href="products.html">婚禮資訊</a></li>
-            <li><a href="contact.html">訂房資訊</a></li>
-            <li><a href="contact.html">婚禮照</a></li>
+            <li><a href="index.html">婚禮資訊</a></li>
         </ul>
     </nav>
   <div class="container" id="containerId"> 
