--- a/form.html
+++ b/form.html
@@ -97,7 +97,7 @@
               </div>
             </div>
         <div class="button">
-          <input type="submit" value="Register">
+          <input type="submit" value="提交">
         </div>
       </form>
     </div>
