update form page

--- a/form.html
+++ b/form.html
@@ -101,6 +101,9 @@
         </div>
       </form>
     </div>
+    <div>
+      <span class="submited-text">提交中 請稍等片刻</span>          
+      </div>
   </div>
   <script src="sheet.js"></script>
 </body>
