update location page

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="sheet.css">
+    <link rel="stylesheet" href="index.css">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>Jason Julia Wedding</title>
    </head>
@@ -11,7 +11,7 @@
       <nav class="navbar">
         <ul>
             <li><a href="form.html">填寫報名表</a></li>
-            <li><a href="index.html">婚禮資訊</a></li>
+            <li><a href="location.html">婚禮資訊</a></li>
         </ul>
     </nav>
   <script src="sheet.js"></script>
