--- a/form.html
+++ b/form.html
@@ -13,7 +13,7 @@
       <nav class="navbar">
         <ul>
             <li><a href="index.html">首頁</a></li>
-            <li><a href="index.html">婚禮資訊</a></li>
+            <li><a href="location.html">婚禮資訊</a></li>
         </ul>
     </nav>
   <div class="container" id="containerId"> 
