--- a/location.html
+++ b/location.html
@@ -12,12 +12,13 @@
         <ul>
           <li><a href="index.html">首頁</a></li>
           <li><a href="form.html">填寫報名表</a></li>
+          <li><a href="location.html">婚禮資訊</a></li>
         </ul>
     </nav>
     <div class="heading">
       <h4> - 婚宴資訊 -</h4>
       <p>2024/9/7(六) 晚宴</p>
-      <p>維多麗亞酒店
+      <p>維多麗亞酒店 大宴會廳1F
       <br>
        (地址: 台北市中山區敬業四路168號)
        <br>
