--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <h1>Wedding Invitation</h1>
       <nav class="navbar">
         <ul>
+            <li><a href="index.html">首頁</a></li>
             <li><a href="form.html">填寫報名表</a></li>
             <li><a href="location.html">婚禮資訊</a></li>
         </ul>
