--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="index.css">
+    <link rel="preload" href="small-mobile.jpg" as="image">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>Jason Julia Wedding</title>
    </head>
@@ -10,9 +11,23 @@
   <h1>Wedding Invitation</h1>
       <nav class="navbar">
         <ul>
-            <li><a href="index.html">首頁</a></li>
-            <li><a href="form.html">填寫報名表</a></li>
-            <li><a href="location.html">婚禮資訊</a></li>
+          <!--
+            <li><a href="index.html">首頁<br>Home</a></li>
+            <li><a href="form.html">填寫報名表<br>Form</a></li>
+            <li><a href="location.html">婚禮資訊<br>Info</a></li>
+            <li><a href="gallery.html">婚禮照搶先看<br>Peak</a></li>
+
+
+             <li><a href="index.html">Home<br>首頁</a></li>
+            <li><a href="form.html">Form<br>填寫報名表</a></li>
+            <li><a href="location.html">Info<br>婚禮資訊</a></li>
+            <li><a href="gallery.html">Peak<br>婚禮照搶先看</a></li>
+          -->
+          <li><a href="index.html">首頁</a></li>
+          <li><a href="form.html">填寫報名表</a></li>
+          <li><a href="location.html">婚禮資訊</a></li>
+          <li><a href="gallery.html">婚紗照</a></li>
+           
         </ul>
     </nav>
   <script src="sheet.js"></script>
