--- a/location.html
+++ b/location.html
@@ -13,10 +13,11 @@
           <li><a href="index.html">首頁</a></li>
           <li><a href="form.html">填寫報名表</a></li>
           <li><a href="location.html">婚禮資訊</a></li>
+          <li><a href="gallery.html">婚紗照</a></li>
         </ul>
     </nav>
     <div class="heading">
-      <h4> - 婚宴資訊 -</h4>
+      <h4> - 婚 禮 資 訊 -</h4>
       <p>2024/9/7(六) 晚宴</p>
       <p>維多麗亞酒店 大宴會廳1F
       <br>
