--- a/gallery.html
+++ b/gallery.html
@@ -35,7 +35,7 @@
   </nav>
   <!-- Content -->
   <div class="container mx-auto">
-    <h1 class="text" style="font-size: 25px;">Jason & Julia</h1>
+    <h1 class="text" id="headerTitle" style="font-size: 25px;">Jason & Julia</h1>
     <section class="text-neutral-700">
       <div class="container w-full">
         <div class="flex flex-wrap w-full">
