--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="index.css">
-    <link rel="preload" href="small-mobile.jpg" as="image">
+    <link rel="preload" href="https://res.cloudinary.com/dmxjvj0mh/image/upload/v1711727873/small-mobile-text.jpg" as="image">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>Jason Julia Wedding</title>
+     <link rel="icon" type="image/x-icon" href="JJ.ico" />
    </head>
 <body>
   <h1>Wedding Invitation</h1>
