--- a/location.html
+++ b/location.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="location.css">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>Jason Julia Wedding</title>
+     <link rel="icon" type="image/x-icon" href="JJ.ico" />
    </head>
 <body>
   <h1>Wedding Invitation</h1>
