--- a/form.html
+++ b/form.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>Jason Julia Wedding</title>
+     <link rel="icon" type="image/x-icon" href="JJ.ico" />
    </head>
 <body>
   <h1>Wedding Invitation</h1>
