--- a/form.html
+++ b/form.html
@@ -35,7 +35,7 @@
             <input type="text" name="number" placeholder="請輸入你的電話">
           </div>
           <div class="input-box">
-            <span class="details">電子信箱*</span>
+            <span class="details">電子信箱</span>
             <input type="email" name="email" placeholder="接收電子喜帖的信箱">
           </div>
       </div>
