--- a/gallery.html
+++ b/gallery.html
@@ -42,21 +42,21 @@
           <div class="flex w-full md:w-1/2 flex-wrap">
             <div class="w-full md:w-1/2 p-1">
               <div class="overflow-hidden h-full w-full">
-                <a href="images/a.jpg"
+                <a href="https://res.cloudinary.com/dmxjvj0mh/image/upload/v1711728639/a.jpg.jpg"
                   data-fancybox="gallery">
                   <img alt="a person standing in front of a rock formation"
                     class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
-                    src="images/a.jpg" />
+                    src="https://res.cloudinary.com/dmxjvj0mh/image/upload/v1711728639/a.jpg.jpg" />
                 </a>
               </div>
             </div>
             <div class="w-full md:w-1/2 p-1">
               <div class="overflow-hidden h-full w-full">
-                <a href="images/b.jpg"
+                <a href="https://res.cloudinary.com/dmxjvj0mh/image/upload/v1711728779/b.jpg.jpg"
                   data-fancybox="gallery">
                   <img alt="a cat laying on top of a sidewalk next to the ocean"
                     class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
-                    src="images/b.jpg" />
+                    src="https://res.cloudinary.com/dmxjvj0mh/image/upload/v1711728779/b.jpg.jpg" />
                 </a>
               </div>
             </div>
