--- a/gallery.html
+++ b/gallery.html
@@ -62,11 +62,11 @@
             </div>
             <div class="w-full p-1">
               <div class="overflow-hidden h-full w-full">
-                <a href="images/c.jpg"
+                <a href="https://res.cloudinary.com/dmxjvj0mh/image/upload/v1711731675/c.jpg.jpg"
                   data-fancybox="gallery">
                   <img alt="a man standing on a beach next to the ocean"
                     class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
-                    src="images/c.jpg" />
+                    src="https://res.cloudinary.com/dmxjvj0mh/image/upload/v1711731675/c.jpg.jpg" />
                 </a>
               </div>
             </div>
@@ -74,51 +74,51 @@
           <div class="flex w-full md:w-1/2 flex-wrap">
             <div class="w-full p-1">
               <div class="overflow-hidden h-full w-full">
-                <a href="images/d.jpg"
+                <a href="https://res.cloudinary.com/dmxjvj0mh/image/upload/v1711731474/d.jpg.jpg"
                   data-fancybox="gallery">
                   <img alt="a snow covered mountain with trees on the side"
                     class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
-                    src="images/d.jpg" />
+                    src="https://res.cloudinary.com/dmxjvj0mh/image/upload/v1711731474/d.jpg.jpg" />
                 </a>
               </div>
             </div>
             <div class="w-full md:w-1/2 p-1">
               <div class="overflow-hidden h-full w-full">
-                <a href="images/e.jpg"
+                <a href="https://res.cloudinary.com/dmxjvj0mh/image/upload/v1711731475/e.jpg.jpg"
                   data-fancybox="gallery">
                   <img alt="a branch of a plant floating in a body of water"
                     class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
-                    src="images/e.jpg" />
+                    src="https://res.cloudinary.com/dmxjvj0mh/image/upload/v1711731475/e.jpg.jpg" />
                 </a>
               </div>
             </div>
             <div class="w-full md:w-1/2 p-1">
               <div class="overflow-hidden h-full w-full">
-                <a href="images/f.jpg"
+                <a href="https://res.cloudinary.com/dmxjvj0mh/image/upload/v1711731476/f.jpg.jpg"
                   data-fancybox="gallery">
                   <img alt="a blue sky with a lot of red and orange clouds"
                     class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
-                    src="images/f.jpg" />
+                    src="https://res.cloudinary.com/dmxjvj0mh/image/upload/v1711731476/f.jpg.jpg" />
                 </a>
               </div>
             </div>
             <div class="w-full md:w-1/2 p-1">
               <div class="overflow-hidden h-full w-full">
-                <a href="images/g.jpg"
+                <a href="https://res.cloudinary.com/dmxjvj0mh/image/upload/v1711731477/g.jpg.jpg"
                   data-fancybox="gallery">
                   <img alt="a view of the ocean from the top of a hill"
                     class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
-                    src="images/g.jpg" />
+                    src="https://res.cloudinary.com/dmxjvj0mh/image/upload/v1711731477/g.jpg.jpg" />
                 </a>
               </div>
             </div>
             <div class="w-full md:w-1/2 p-1">
               <div class="overflow-hidden h-full w-full">
-                <a href="images/h.jpg"
+                <a href="https://res.cloudinary.com/dmxjvj0mh/image/upload/v1711731478/h.jpg.jpg"
                   data-fancybox="gallery">
                   <img alt="a pheasant flying in the sky with its wings spread"
                     class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
-                    src="images/h.jpg" />
+                    src="https://res.cloudinary.com/dmxjvj0mh/image/upload/v1711731478/h.jpg.jpg" />
                 </a>
               </div>
             </div>
@@ -127,51 +127,51 @@
           <div class="flex w-full md:w-1/2 flex-wrap">
             <div class="w-full p-1">
               <div class="overflow-hidden h-full w-full">
-                <a href="images/i.jpg"
+                <a href="https://res.cloudinary.com/dmxjvj0mh/image/upload/v1711731479/i.jpg.jpg"
                   data-fancybox="gallery">
                   <img alt="a statue of a man next to a statue of a woman"
                     class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
-                    src="images/i.jpg" />
+                    src="https://res.cloudinary.com/dmxjvj0mh/image/upload/v1711731479/i.jpg.jpg" />
                 </a>
               </div>
             </div>
             <div class="w-full md:w-1/2 p-1">
               <div class="overflow-hidden h-full w-full">
-                <a href="images/j.jpg"
+                <a href="https://res.cloudinary.com/dmxjvj0mh/image/upload/v1711731480/j.jpg.jpg"
                   data-fancybox="gallery">
                   <img alt="a city street with tall buildings in the background"
                     class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
-                    src="images/j.jpg" />
+                    src="https://res.cloudinary.com/dmxjvj0mh/image/upload/v1711731480/j.jpg.jpg" />
                 </a>
               </div>
             </div>
             <div class="w-full md:w-1/2 p-1">
               <div class="overflow-hidden h-full w-full">
-                <a href="images/k.jpg"
+                <a href="https://res.cloudinary.com/dmxjvj0mh/image/upload/v1711731481/k.jpg.jpg"
                   data-fancybox="gallery">
                   <img alt="25 de abril bridge spanning over Tagus river"
                     class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
-                    src="images/k.jpg" />
+                    src="https://res.cloudinary.com/dmxjvj0mh/image/upload/v1711731481/k.jpg.jpg" />
                 </a>
               </div>
             </div>
             <div class="w-full md:w-1/2 p-1">
               <div class="overflow-hidden h-full w-full">
-                <a href="images/l.jpg"
+                <a href="https://res.cloudinary.com/dmxjvj0mh/image/upload/v1711731482/l.jpg.jpg"
                   data-fancybox="gallery">
                   <img alt="a lot of lanterns floating in the air at night"
                     class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
-                    src="images/l.jpg" />
+                    src="https://res.cloudinary.com/dmxjvj0mh/image/upload/v1711731482/l.jpg.jpg" />
                 </a>
               </div>
             </div>
             <div class="w-full md:w-1/2 p-1">
               <div class="overflow-hidden h-full w-full">
-                <a href="images/m.jpg"
+                <a href="https://res.cloudinary.com/dmxjvj0mh/image/upload/v1711731482/m.jpg.jpg"
                   data-fancybox="gallery">
                   <img alt="a flock of seaguls flying over a body of water"
                     class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
-                    src="images/m.jpg" />
+                    src="https://res.cloudinary.com/dmxjvj0mh/image/upload/v1711731482/m.jpg.jpg" />
                 </a>
               </div>
             </div>
@@ -179,32 +179,32 @@
           <div class="flex w-full md:w-1/2 flex-wrap">
             <div class="w-full md:w-1/2 p-1">
               <div class="overflow-hidden h-full w-full">
-                <a href="images/n.jpg"
+                <a href="https://res.cloudinary.com/dmxjvj0mh/image/upload/v1711731483/n.jpg.jpg"
                   data-fancybox="gallery">
                   <img alt="a statue of a headless angel"
                     class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
-                    src="images/n.jpg" />
+                    src="https://res.cloudinary.com/dmxjvj0mh/image/upload/v1711731483/n.jpg.jpg" />
                 </a>
               </div>
             </div>
             <div class="w-full md:w-1/2 p-1">
               <div class="overflow-hidden h-full w-full">
-                <a href="images/o.jpg"
+                <a href="https://res.cloudinary.com/dmxjvj0mh/image/upload/v1711731484/o.jpg.jpg"
                   data-fancybox="gallery">
                   <img alt="Monument to the Discoveries viewed from top to bottom"
                     class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
-                    src="images/o.jpg" />
+                    src="https://res.cloudinary.com/dmxjvj0mh/image/upload/v1711731484/o.jpg.jpg" />
                 </a>
               </div>
             </div>
             <div class="w-full p-1">
               <div class="overflow-hidden h-full w-full">
-                <a href="images/p.jpg"
+                <a href="https://res.cloudinary.com/dmxjvj0mh/image/upload/v1711731485/p.jpg.jpg"
                   data-fancybox="gallery">
                   <img
                     alt="a group of people walking along the museum of art, architecture and technology of lisbon next to the Tagus river"
                     class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
-                    src="images/p.jpg" />
+                    src="https://res.cloudinary.com/dmxjvj0mh/image/upload/v1711731485/p.jpg.jpg" />
                 </a>
               </div>
             </div>
