--- a/form.html
+++ b/form.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <!---<title> Responsive Registration Form | CodingLab </title>--->
     <link rel="stylesheet" href="style.css">
-    <link rel="preload" href="JJ.ico" as="image">
+    <link rel="preload" href="https://res.cloudinary.com/dmxjvj0mh/image/upload/v1711732386/buddy_icon.png" as="image">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>Jason Julia Wedding</title>
      <link rel="icon" type="image/x-icon" href="JJ.ico" />
